--- a/public/back/index.html
+++ b/public/back/index.html
@@ -18,7 +18,8 @@
 
 
 
-  
+
  <script src="lib/jquery/jquery.js"></script>
+ <script src="lib/bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
