--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-       <!-- 模态框 -->
+       <!--退出 模态框 -->
 <div class="modal fade" tabindex="-1" id="logoutModal">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
