--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -16,7 +16,7 @@
       <a href="index.html">黑马22期</a>
     </div>
     <div class="user">
-      <img src="images/default.jpg" alt="">
+      <img src="images/default.png" alt="">
       <p>超级管理员</p>
     </div>
     <div class="nav">
