--- a/public/front/category.html
+++ b/public/front/category.html
@@ -9,19 +9,42 @@
   <link rel="stylesheet" href="lib/mui/css/mui.css">
   <link rel="stylesheet" href="lib/fa/css/font-awesome.css">
   <link rel="stylesheet" href="css/commin.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/category.css">
 </head>
 <body>
   <div class="lt_container">
     <!-- 头部区域 -->
     <div class="lt_header">
-      <a class="icon_left" href="index.html">
+      <a class="icon_left" href="javascript:history.go(-1);">
         <span class="mui-icon mui-icon-back"></span>
       </a>
       <h4>乐淘分类</h4>
       <a class="icon_right" href="search.html">
         <span class="fa fa-search"></span>
       </a>
+    </div>
+    <!-- 内容区域 -->
+    <div class="lt_content">
+        <div class="caterory_left mui-clearfix">
+          <div class="mui-scroll-wrapper">
+            <div class="mui-scroll">
+              <ul>
+                <!-- 挖个坑 -->
+                </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="category_right mui-clearfix">
+        <div class="mui-scroll-wrapper">
+          <div class="mui-scroll">
+            <ul>
+
+              <!-- 挖个坑 -->
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
 
           <!-- 底部区域 -->
@@ -52,9 +75,31 @@
                 </a>
               </li>
             </ul>
+            </div>
           </div>
-          </div>
+   <script type="text/html" id="tpl">
+    {{each rows v i}}
+    <li data-id="{{v.id}}" class="{{i==0? "now":""}}">
+      <a href="javascript:;">{{v.categoryName}}</a>
+    </li>
+    {{/each}}
+   </script>
+   <script type="text/html" id="tpl2">
+    {{if rows.length==0}}
+    <p class="tips">当前分类页下没有内容！</p>
+    {{/if}}
+    {{each rows v i}}
+    <li>
+      <a href="#"><img src="{{v.brandLogo}}" alt="">
+        <p>{{v.brandName}}</p>
+      </a>
+    </li>
+    {{/each}}
+  </script>
   <script src="lib/mui/js/mui.js"></script>
+  <script src="lib/zepto/zepto.min.js"></script>
+  <script src="lib/artTemplate/template-web.js"></script>
   <script src="js/commin.js"></script>
+  <script src="js/category.js"></script>
 </body>
 </html>
