--- a/public/front/searchList.html
+++ b/public/front/searchList.html
@@ -75,11 +75,11 @@
             </div>
           </div>
           <script type="text/html" id="tpl">
-            {{if data.length===0}}
+            <!-- {{if data.length===0}}
             <p>没有更多商品信息了</p>
-            {{else}}
+            {{else}} -->
             {{each data v i}}
-            <a href="#">
+            <a href="product.html?productId={{v.id}}">
                 <img src="{{v.pic[0].picAddr}}" alt="">
                 <p class="mui-ellipsis-2 proName">{{v.num}}--{{v.proName}}</p>
                 <p>
@@ -90,12 +90,13 @@
               </a>
               {{/each}}
 
-              {{/if}}
+              <!-- {{/if}} -->
           </script>
   <script src="lib/mui/js/mui.js"></script>
   <script src="lib/zepto/zepto.min.js"></script>
   <script src="lib/artTemplate/template-web.js"></script>
   <script src="js/commin.js"></script>
-  <script src="js/searchList.js"></script>
+  <!-- <script src="js/searchList.js"></script> -->
+  <script src="js/searchList上拉刷新下拉加载.js"></script>
 </body>
 </html>
