--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -46,7 +46,10 @@
           <li class="active">首页</li>
         </ol>
         <!-- 内容区域 -->
-        <div class="lt_content">111</div>
+        <div class="lt_content">
+          <div class="charts_left pull-left">11</div>
+          <div class="charts_right pull-right">22</div>
+        </div>
     </div>
   </div>
 
@@ -78,6 +81,8 @@
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/bootstrap/js/bootstrap.js"></script>
     <script src="lib/nprogress/nprogress.js"></script>
+    <script src="lib/echarts/echarts.min.js"></script>
     <script src="js/common.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
